--- a/content/about/index.html
+++ b/content/about/index.html
@@ -15,4 +15,62 @@ description: "Meet the people who make it possible to serve you and find out our
 
 <section>
   <h2>Meet the Crew</h2>
+  <div class="profile">
+    <div class="profile-img">
+      {{< image src="Marv.jpg" class="profile-pic" alt="team member" widths="250" type="global">}}
+    </div>
+    <h3>Sheila <span class=" role">SECRETARY</span></h3>
+    <p>Sheila is the indispensable voice you hear when you call us. She loves relating to you, our customers, and enjoys the challenge of making it all flow. When not on the phone, sending quotes and such like, she fills her time with graphic design. Her family and friends are delighted to fill any spare moments she has, and she must rank as the world's best babysitter. She enjoys almost any outdoor activity that comes her way. </p>
+  </div>
+  <div class="profile">
+    <div class="profile-img">
+      {{< image src="Brian.jpg" class="profile-pic" alt="team member" widths="250" type="global">}}
+    </div>
+    <h3>Brian <span class=" role">TECHNICIAN</span></h3>
+    <p>Brian has been on the Foothills crew for nine years. He knows garage doors inside and out, and dives into repairs with a smile. Brian enjoys people, and customers have been known to insist on having him return for their next project. On weekends you’ll find him spending time with his family…grilling, disc golfing, detailing vehicles or working on home improvements with his toddler and dog for sidekicks.</p>
+  </div>
+  <div class="profile">
+    <div class="profile-img">
+      {{< image src="Marv.jpg" class="profile-pic" alt="team member" widths="250" type="global">}}
+    </div>
+    <h3>Marvin <span class=" role">TECHNICIAN</span></h3>
+    <p>Marvin joined the team five years ago. He gets 5-star reviews for being a quiet worker, and often tackles big commercial installations. He likes to keep his ducks in a row, and is very detail oriented. If Marvin does something, it’ll be done right. The best thing about him is how astonished he can look without saying a word. He’s an avid hunter, and goes for everything from hogs to elk.</p>
+  </div>
+  <div class="profile">
+    <div class="profile-img">
+      {{< image src="Tony.jpg" class="profile-pic" alt="team member" widths="250" type="global">}}
+    </div>
+    <h3>Tony <span class=" role">TECHNICIAN</span></h3>
+    <p>Tony’s been with Foothills for four years, and his previous experience in carpentry stands him in good stead. Building customer relationships is one of Tony’s strong points. He always has time to chat, and opinions and ideas to share. He enjoys technical details, and loves to drive vans. Weekends you’ll find him with his family, working on his house or property. Having four children doesn’t keep Tony himself from asking “Are we there yet?” on road trips.</p>
+  </div>
+
+  <div class="profile">
+    <div class="profile-img">
+      {{< image src="Vern.jpg" class="profile-pic" alt="team member" widths="250" type="global">}}
+    </div>
+    <h3>Vernon <span class=" role">TECHNICIAN</span></h3>
+    <p>Vernon joined Foothills three years ago. With his background in construction he became a professional door installer in record time. His perfectionism aids him in doing excellent work, and you’ll never find his perfectly-organized toolbox left sitting on your driveway. If it’s duck or turkey season he’ll be camouflaged from head to toe, and outside of work you’re liable to run into Vernon on a golf course or the lake.</p>
+  </div>
+  <div class="profile">
+    <div class="profile-img">
+      {{< image src="Laban.jpg" class="profile-pic" alt="team member" widths="250" type="global">}}
+    </div>
+    <h3>Laban <span class=" role">TECHNICIAN</span></h3>
+    <p>Laban is the newest technician to join Foothills, but with years of experience in construction he has learned quickly. He is diligent, hard working, easy to get along with and loves his family. Outside of work he’s very much an outdoors man and enjoys hunting, raising produce, and tending his honeybees.</p>
+  </div>
+  <div class="profile">
+    <div class="profile-img">
+      {{< image src="Kari.jpg" class="profile-pic" alt="team member" widths="250" type="global">}}
+    </div>
+    <h3>Kari <span class=" role">OFFICE ASSISTANT</span></h3>
+    <p>Kari’s been an integral part of the Foothills team for two years. She runs everything from keyboards to forklifts in her role as assistant/secretary. Her sense of humor often has her laughing while she does bookwork, and she has been known to say that “life is one giant blonde moment”. Outside of the office, she loves spending time with her nieces and nephew and is always up for shopping, fishing or coffee.</p>
+  </div>
+  <div class="profile">
+    <div class="profile-img">
+      {{< image src="Joe.jpg" class="profile-pic" alt="team member" widths="250" type="global">}}
+    </div>
+    <h3>Joe <span class=" role">MANAGER</span></h3>
+    <p>Joe established Foothills Overhead Doors in 2007. He is grateful to his wonderful team, and honored to serve you, our valued customers. When taking time away from doors and the office, he is often active in church-related activities. There’s nothing he likes better than enjoying nature with his wife and girls. On weekends, chances are good that you’ll find him chasing bass, and during turkey season he’ll be tramping around somewhere in the Ozarks. Joe gives everything his best effort and tries to keep life interesting at the same time…whether it’s hanging doors or teaching his girls to organize tackle boxes.</p>
+  </div>
+
 </section>
