--- a/content/about/index.html
+++ b/content/about/index.html
@@ -17,7 +17,7 @@ description: "Meet the people who make it possible to serve you and find out our
   <h2>Meet the Crew</h2>
   <div class="profile">
     <div class="profile-img">
-      {{< image src="Marv.jpg" class="profile-pic" alt="team member" widths="250" type="global">}}
+      {{< image src="Sheila.jpg" class="profile-pic" alt="team member" widths="250" type="global">}}
     </div>
     <h3>Sheila <span class=" role">SECRETARY</span></h3>
     <p>Sheila is the indispensable voice you hear when you call us. She loves relating to you, our customers, and enjoys the challenge of making it all flow. When not on the phone, sending quotes and such like, she fills her time with graphic design. Her family and friends are delighted to fill any spare moments she has, and she must rank as the world's best babysitter. She enjoys almost any outdoor activity that comes her way. </p>
@@ -72,5 +72,14 @@ description: "Meet the people who make it possible to serve you and find out our
     <h3>Joe <span class=" role">MANAGER</span></h3>
     <p>Joe established Foothills Overhead Doors in 2007. He is grateful to his wonderful team, and honored to serve you, our valued customers. When taking time away from doors and the office, he is often active in church-related activities. There’s nothing he likes better than enjoying nature with his wife and girls. On weekends, chances are good that you’ll find him chasing bass, and during turkey season he’ll be tramping around somewhere in the Ozarks. Joe gives everything his best effort and tries to keep life interesting at the same time…whether it’s hanging doors or teaching his girls to organize tackle boxes.</p>
   </div>
+  <a href="/contact" class="btn-main">Contact Us</a>
 
+</section>
+
+<section class="white-background mid-btn-border about text-section">
+  <h2>How We Started</h2>
+  <p class="brown-text">Foothills Overhead Doors LLC was established with a commitment to quality, customer service, value, and, most of all, making your Complete Satisfaction our Goal. Due to the success of this simple business goal, we have become what we are today - the Northeast Arkansas overhead door sales and service company of quality and value in the full line of products we offer. From standard sectional panel overhead doors in residential and commercial styles, to high-speed doors, counter shutters, fire doors, security grills, and so much more, we have the options you are looking for.</p>
+  <p class="brown-text">We are an installer/employee-owned family-managed business based in Strawberry, AR giving us the ability to efficiently service all of Northeast to North Central Arkansas. Our in-house-trained, part-owner installers and service technicians are dedicated to doing their best for you in all they do. We carry the full product lines of CHI Overhead Doors Inc., Liftmaster Openers and Operators, Rytec High Speed Doors, Janus International Inc., Advanced Door Technologies Inc., and other specialty doors so as to have the door you need for your specific application. We especially want to extend a thank you to CHI Overhead Doors Inc. and their staff for all their assistance to us and our customers. Without them we would not be where we are today. </p>
+  <p class="brown-text">We are not here just to sell you a product, we are here to install it and service it in a way that you can be proud of. Give us a call today and join our family, for the good of your family or business.</p>
+  <a href="/contact" class="btn-main">Get a Quote</a>
 </section>
