--- a/content/contact/index.html
+++ b/content/contact/index.html
@@ -10,3 +10,25 @@ description: "Get in touch with us to find out more about our high-quality doors
   <p class="big-p brown-text">Thank you for your interest in Foothills Overhead Doors LLC of Northeast Arkansas. Serving Jonesboro Arkansas and the surrounding area with quality overhead door products and services. We are privileged to have this opportunity to serve you! Our Business Goal is really quite simple: <span class="bold">Your Satisfaction.</span> Give us a call today and experience the difference of commitment to you.</p>
   <a href="tel:8702759899" class="btn-main">Call Now</a>
 </section>
+
+<section class="white-background mid-btn-border contact-info">
+  <div class="">
+		<div class="">
+	  	<a href="/" class=""><img src="/images/logo.png" alt="foothills logo"></a>
+	  </div>
+		<div class="">
+			<a href="tel:8702759899" class="phone-number brown-text">870-275-9899</a>
+      <p class="small-header-text">Call or Text</p>
+      <br>
+			<a class="big-p brown-text" href="https://goo.gl/maps/myBRKTUYtvvz2gNSA">135 Leggett St,<br> Jonesboro AR 72401</a>
+      <a class="big-p brown-text" href="mailto:sales@foothillsoverheaddoors.com">sales@FoothillsOverheadDoors.com</a>
+		</div>
+  </div>
+</section>
+
+<section>
+  <h2>I Want a Quote</h2>
+  <form class="" action="" netlify method="post">
+    
+  </form>
+</section>
