--- a/content/rolling-steel/index.html
+++ b/content/rolling-steel/index.html
@@ -46,49 +46,64 @@ description: "Quality rolling steel overhead doors for commercial applications. 
     <h3 class="heading-cheap">Standard Colors</h3>
     <div class="color-choices">
       <div class="">
-        <div class="white">
-        </div>
-        <p class="brown-text">White</p>
-      </div>
-      <div class="">
-        <div class="almond">
-        </div>
-        <p class="brown-text">Almond</p>
-      </div>
-      <div class="">
-        <div class="sandstone">
-        </div>
-        <p class="brown-text">Sandstone</p>
-      </div>
-      <div class="">
-        <div class="brown">
-        </div>
-        <p class="brown-text">Brown</p>
-      </div>
-      <div class="">
-        <div class="bronze">
+        <div class="bronze-coil">
         </div>
         <p class="brown-text">Bronze</p>
       </div>
       <div class="">
-        <div class="gray">
+        <div class="cedar-red">
         </div>
-        <p class="brown-text">Gray</p>
+        <p class="brown-text">Cedar Red</p>
       </div>
       <div class="">
-        <div class="desert-tan">
+        <div class="cont-brown">
+        </div>
+        <p class="brown-text">Continental Brown</p>
+      </div>
+      <div class="">
+        <div class="des-sand">
+        </div>
+        <p class="brown-text">Desert Sand</p>
+      </div>
+      <div class="">
+        <div class="des-tan">
         </div>
         <p class="brown-text">Desert Tan</p>
       </div>
       <div class="">
-        <div class="charcoal">
+        <div class="gloss-white">
         </div>
-        <p class="brown-text">Charcoal</p>
+        <p class="brown-text">High-Gloss White</p>
       </div>
       <div class="">
-        <div class="black">
+        <div class="lg-green">
         </div>
-        <p class="brown-text">Black</p>
+        <p class="brown-text">LG (Forest) Green</p>
+      </div>
+      <div class="">
+        <div class="light-stone">
+        </div>
+        <p class="brown-text">Light Stone</p>
+      </div>
+      <div class="">
+        <div class="sandstone-coil">
+        </div>
+        <p class="brown-text">Sandstone</p>
+      </div>
+      <div class="">
+        <div class="satin-white">
+        </div>
+        <p class="brown-text">Satin White</p>
+      </div>
+      <div class="">
+        <div class="sil-gray">
+        </div>
+        <p class="brown-text">Silhouette Gray</p>
+      </div>
+      <div class="">
+        <div class="">
+        </div>
+
       </div>
     </div>
   </div>
@@ -96,30 +111,62 @@ description: "Quality rolling steel overhead doors for commercial applications. 
     <h3 class="heading-econ">Specialty Colors</h3>
     <div class="color-choices">
       <div class="">
-        <div class="graphite">
+        <div class="galvalume">
         </div>
-        <p class="brown-text">Graphite</p>
+        <p class="brown-text">AG Galvalume</p>
       </div>
       <div class="">
-        <div class="evergreen">
+        <div class="colony-green">
+        </div>
+        <p class="brown-text">Colony Green</p>
+      </div>
+      <div class="">
+        <div class="evergreen-coil">
         </div>
         <p class="brown-text">Evergreen</p>
       </div>
       <div class="">
-        <div class="classic-woodgrain">
+        <div class="fern-green">
         </div>
-        <p class="brown-text">Classic Woodgrain</p>
+        <p class="brown-text">Fern Green</p>
       </div>
       <div class="">
-        <div class="modern-woodgrain">
+        <div class="polar-blue">
         </div>
-        <p class="brown-text">Modern Woodgrain</p>
+        <p class="brown-text">Polar Blue</p>
       </div>
       <div class="">
-        <div class="more">
+        <div class="royal-blue">
         </div>
-        <p class="brown-text">Call For More</p>
+        <p class="brown-text">Royal Blue</p>
       </div>
+      <div class="">
+        <div class="smart-blue">
+        </div>
+        <p class="brown-text">Smart Blue</p>
+      </div>
+      <div class="">
+        <div class="sunset-orange">
+        </div>
+        <p class="brown-text">Sunset Orange</p>
+      </div>
+      <div class="">
+        <div class="teal">
+        </div>
+        <p class="brown-text">Teal</p>
+      </div>
+      <div class="">
+        <div class="ultra-blue">
+        </div>
+        <p class="brown-text">Ultra Marine Blue</p>
+      </div>
+      <div class="">
+        <div class="cobalt-blue">
+        </div>
+        <p class="brown-text">Cobalt Blue</p>
+      </div>
+      
+
       <div class="">
         <div class="empty">
         </div>
