--- a/content/about/index.html
+++ b/content/about/index.html
@@ -7,7 +7,7 @@ description: "Meet the people who make it possible to serve you and find out our
 
 
 <section>
-  <h1>About Foothills</h1>
+  <h1 class="tan-text">About Foothills</h1>
   <p class="big-text brown-text bold">Welcome to Foothills Overhead Doors</p>
   <p>A big THANK YOU to all of our valued customers in Jonesboro, Paragould, Hardy, Walnut Ridge, Hoxie, Batesville, and the rest of Northeast Arkansas who have helped us grow to where we are today.</p>
 </section>
