--- a/content/faqs/index.html
+++ b/content/faqs/index.html
@@ -14,7 +14,19 @@ description: "Check out our helpful videos on how to prep for your new door and 
 <section>
   <div class="video">
     <h2>How to Measure</h2>
-    <p class="big-p center">For existing doors or new installations.</p>
+    <p class="big-p">For existing doors or new installations.</p>
     {{< youtube w7Ft2ymGmfc >}}
   </div>
+  <div class="video">
+    <h2>How to Frame</h2>
+    <p class="big-p">What you should know about framing for an overhead door.</p>
+    {{< youtube w7Ft2ymGmfc >}}
+  </div>
+  <div class="video">
+    <h2>How to Maintain</h2>
+    <p class="big-p">How to maintain your garage door for ultimate performance and lifetime.</p>
+    {{< youtube w7Ft2ymGmfc >}}
+  </div>
+  <p class="big-p">Still have questions? Give us a call.</p>
+  <a href="tel:8702759899" class="btn-main ">870-275-9899</a>
 </section>
