--- a/content/reviews/index.html
+++ b/content/reviews/index.html
@@ -9,4 +9,8 @@ description: "Read what our customers have to say about our doors and services."
 <section>
   <h1 class="tan-text">Reviews</h1>
   {{<reviews>}}
+
+  <a href="tel:8702759899" class="btn-main">870-275-9899</a>
+  <br>
+  <br>
 </section>
