--- a/content/_index.html
+++ b/content/_index.html
@@ -17,8 +17,10 @@ description: "Foothills Overhead Doors is your premier supplier and installer of
   </div>
   <div class="hero--text">
     <p>Since 2007, Foothills Overhead Doors LLC has been serving Northeast Arkansas. We are a full line overhead door sales and service company. Our products are known for their quality and value. From sectional overhead doors in residential and commercial styles, to high-speed doors, counter shutters, fire doors, security grills, and more, we have a door for your application and style. </p>
-    <a href="/residential-doors" class="btn-tan">Residential Doors</a>
-    <a href="/commercial-doors" class="btn-tan">Commercial Doors</a>
+    <div class="buttons">
+      <a href="/residential-doors" class="btn-tan">Residential Doors</a>
+      <a href="/commercial-doors" class="btn-tan">Commercial Doors</a>
+    </div>
   </div>
 </section>
 
@@ -32,7 +34,7 @@ description: "Foothills Overhead Doors is your premier supplier and installer of
     <li>We'll schedule a date to install your new garage doors.</li>
     <li>We'll install your garage door with as much care as if it was our own.</li>
   </ol>
-  <p>Enjoy your new garage door for years.</p>
+  <p class="big-p bold center">Enjoy your new garage door for years.</p>
 </section>
 
 <!--How we work section-->
