--- a/content/faqs/index.html
+++ b/content/faqs/index.html
@@ -28,7 +28,7 @@ description: "Check out our helpful videos on how to prep for your new door and 
     {{< youtube w7Ft2ymGmfc >}}
   </div>
   <br>
-  <p class="big-p">Still have questions? Give us a call.</p>
+  <p class="big-p center">Still have questions? Give us a call.</p>
   <a href="tel:8702759899" class="btn-main ">870-275-9899</a>
    <br>
    <br>
