--- a/content/_index.html
+++ b/content/_index.html
@@ -55,7 +55,7 @@ description: "Foothills Overhead Doors is your premier supplier and installer of
 </section>
 
 <!--suppliers section-->
-<section class="suppliers">
+<section class="suppliers mid-btn-border white-background">
   <h2>Our Favorite Suppliers</h2>
   <p>Click the logos to visit their websites</p>
   <div class="logos">
