--- a/content/commercial-doors/index.html
+++ b/content/commercial-doors/index.html
@@ -6,7 +6,7 @@ description: "Your source for the highest quality commercial overhead doors and 
 ---
 
 
-<section>
+<section class="hero-section">
   <h1 class="tan-text">Commercial Sectional Overhead Doors</h1>
   <div class="">
     {{< image src="com-hero.jpg" class="secondary-hero" alt="commercial overhead doors" type="global">}}
