--- a/content/residential-doors/index.html
+++ b/content/residential-doors/index.html
@@ -7,7 +7,7 @@ description: Foothills is your premier supplier of overhead doors for your garag
 
 <!--Residential Hero section-->
 
-<section>
+<section class="hero-section residential">
   <h1 class="tan-text">Residential Doors</h1>
   <div class="">
     {{< image src="res-hero.jpg" class="secondary-hero" alt="residential overhead doors" type="global">}}
@@ -158,6 +158,7 @@ description: Foothills is your premier supplier of overhead doors for your garag
       </div>
       <div class="">
         <div class="more">
+
         </div>
         <p class="brown-text">Call For More</p>
       </div>
