--- a/content/custom-residential/index.html
+++ b/content/custom-residential/index.html
@@ -6,7 +6,7 @@ description: "Get a garage door that exactly suits your tastes with our specialt
 ---
 
 
-<section>
+<section class="hero-section">
   <h1 class="tan-text">Custom Residential Doors</h1>
   <div class="">
     {{< image src="custom-res-hero.jpg" class="secondary-hero left-pos-pic" alt="residential overhead doors" type="global">}}
@@ -18,16 +18,16 @@ description: "Get a garage door that exactly suits your tastes with our specialt
 </section>
 
 <section>
-  <h2>Specialty Overhead Door Options</h2>
+  <h2 class="brown-text">Specialty Overhead Door Options</h2>
   <ul>
-    <li>Full View Overhead Doors</li>
-    <li>Partial View Overhead Doors</li>
-    <li>Powder Coating</li>
-    <li>Special Configurations</li>
+    <li class="brown-text">Full View Overhead Doors</li>
+    <li class="brown-text">Partial View Overhead Doors</li>
+    <li class="brown-text">Powder Coating</li>
+    <li class="brown-text">Special Configurations</li>
   </ul>
-  <p>We are here to find what you require. Working with some of the leading manufacturers in the overhead door business, we have partnerships that offer what you need. </p>
-  <p>Join with our other satisfied Northeast Arkansas overhead door customers in experiencing the difference this commitment makes for you and your door.</p>
-  <p class="bold">After all, Your Satisfaction is our Goal</p>
+  <p class="brown-text">We are here to find what you require. Working with some of the leading manufacturers in the overhead door business, we have partnerships that offer what you need. </p>
+  <p class="brown-text">Join with our other satisfied Northeast Arkansas overhead door customers in experiencing the difference this commitment makes for you and your door.</p>
+  <p class="bold brown-text">After all, Your Satisfaction is our Goal</p>
 </section>
 
 <!--Gallery Section-->
