--- a/content/residential-doors/index.html
+++ b/content/residential-doors/index.html
@@ -58,7 +58,7 @@ description: Foothills is your premier supplier of overhead doors for your garag
 </section>
 
 <!--Insulation Section-->
-<section class="choice">
+<section class="choice choice-white-background">
   <h2>Step 2: Choose Your Insulation</h2>
   <div class="choices">
      <div class="cheap">
@@ -221,7 +221,7 @@ description: Foothills is your premier supplier of overhead doors for your garag
 
 
 <!--Windows section-->
-<section class="choice white-background">
+<section class="choice choice-white-background">
   <h2>Step 4: Choose Your Windows</h2>
   <div class="">
     <h3>Type of Glass</h3>
