--- a/content/rolling-steel/index.html
+++ b/content/rolling-steel/index.html
@@ -5,7 +5,7 @@ draft: False
 description: "Quality rolling steel overhead doors for commercial applications. "
 ---
 
-<section>
+<section class="hero-section">
   <h1 class="tan-text">Rolling Steel Doors</h1>
   <div class="">
     {{< image src="rol-hero.jpg" class="secondary-hero center-pos-pic" alt="commercial overhead doors" type="global">}}
@@ -26,7 +26,7 @@ description: "Quality rolling steel overhead doors for commercial applications. 
   <a href="/contact" class="btn-tan">Get A Quote</a>
 </section>
 
-<section class="white-background mid-btn-border">
+<section class="white-background mid-btn-border hero-section">
   <div class="">
     {{< image src="mini-storage.jpg" class="secondary-hero center-pos-pic" alt="commercial overhead doors" type="global">}}
     <div class="rs-points">
@@ -165,7 +165,7 @@ description: "Quality rolling steel overhead doors for commercial applications. 
         </div>
         <p class="brown-text">Cobalt Blue</p>
       </div>
-      
+
 
       <div class="">
         <div class="empty">
