--- a/content/about/index.html
+++ b/content/about/index.html
@@ -15,6 +15,9 @@ description: "Meet the people who make it possible to serve you and find out our
 
 <section>
   <h2>Meet the Crew</h2>
+  <div class="profile-parent">
+
+
   <div class="profile">
     <div class="profile-img">
       {{< image src="Sheila.jpg" class="profile-pic" alt="team member" widths="250" type="global">}}
@@ -71,6 +74,7 @@ description: "Meet the people who make it possible to serve you and find out our
     </div>
     <h3>Joe <span class=" role">MANAGER</span></h3>
     <p>Joe established Foothills Overhead Doors in 2007. He is grateful to his wonderful team, and honored to serve you, our valued customers. When taking time away from doors and the office, he is often active in church-related activities. There’s nothing he likes better than enjoying nature with his wife and girls. On weekends, chances are good that you’ll find him chasing bass, and during turkey season he’ll be tramping around somewhere in the Ozarks. Joe gives everything his best effort and tries to keep life interesting at the same time…whether it’s hanging doors or teaching his girls to organize tackle boxes.</p>
+  </div>
   </div>
   <a href="/contact" class="btn-main">Contact Us</a>
 
