--- a/content/contact/index.html
+++ b/content/contact/index.html
@@ -29,9 +29,14 @@ description: "Get in touch with us to find out more about our high-quality doors
 <section>
   <h2>I Want a Quote</h2>
   <form name='Contact' class="" action="" method="post" data-netlify="true" data-secure>
+    <div class="form-columns">
     <div class="form-input">
-      <label for="Name">Full Name*</label>
-      <input type="text" class="input" name="Name" data-placeholder="Name" value="" required>
+      <label for="FirstName">First Name*</label>
+      <input type="text" class="input" name="FirstName" data-placeholder="First Name" value="" required>
+    </div>
+    <div class="form-input">
+      <label for="LastName">Last Name*</label>
+      <input type="text" class="input" name="LastName" data-placeholder="Last Name" value="" required>
     </div>
     <div class="form-input">
       <label for="Email">Email*</label>
@@ -40,6 +45,7 @@ description: "Get in touch with us to find out more about our high-quality doors
     <div class="form-input">
       <label for="Phone">Phone*</label>
       <input type="phone" class="input" data-placeholder="Phone" name="Phone" value="" required>
+    </div>
     </div>
     <div class="form-input">
       <label for="Address">Job Address</label>
