--- a/content/custom-residential/index.html
+++ b/content/custom-residential/index.html
@@ -18,7 +18,7 @@ description: "Get a garage door that exactly suits your tastes with our specialt
 </section>
 
 <section>
-  <h2 class="brown-text">Specialty Overhead Door Options</h2>
+  <h2 class="brown-text custom-h2">Specialty Overhead Door Options</h2>
   <ul>
     <li class="brown-text">Full View Overhead Doors</li>
     <li class="brown-text">Partial View Overhead Doors</li>
