--- a/content/residential-doors/index.html
+++ b/content/residential-doors/index.html
@@ -354,7 +354,7 @@ description: Foothills is your premier supplier of overhead doors for your garag
 </section>
 
 <!--custom section-->
-<section>
+<section class="top-padding">
   <p>Don't see the options you want? Give us a call... the options truly are endless, but we'll be glad to help you find what you want.</p>
   <a class="btn-main" href="tel:8702759899">870-275-9899</a>
 </section>
