--- a/content/commercial-doors/index.html
+++ b/content/commercial-doors/index.html
@@ -42,7 +42,7 @@ description: "Your source for the highest quality commercial overhead doors and 
 </section>
 
 <!--Insulation Section-->
-<section class="choice">
+<section class="choice choice-white-background">
   <h2>Step 2: Choose Your Insulation</h2>
   <div class="choices">
      <div class="cheap">
