--- a/content/rolling-steel/index.html
+++ b/content/rolling-steel/index.html
@@ -30,7 +30,7 @@ description: "Quality rolling steel overhead doors for commercial applications. 
   <div class="">
     {{< image src="mini-storage.jpg" class="secondary-hero center-pos-pic" alt="commercial overhead doors" type="global">}}
     <div class="rs-points">
-      <h2>Rolling Steel Doors</h2>
+      <h2>Mini Storage Doors</h2>
       <ul>
         <li>Variety of sizes - large and small doors</li>
         <li>Electric and Manual</li>
