--- a/content/commercial-operators/index.html
+++ b/content/commercial-operators/index.html
@@ -8,7 +8,7 @@ description: "Foothills Overhead Doors is your best source for quality Liftmaste
   <h1 class="tan-text">Commercial Operators</h1>
   <div class="">
     {{< image src="comm-op.jpg" class="secondary-hero center-pos-pic half-height" alt="commercial overhead doors" type="global">}}
-    <div class="rs-points">
+    <div class="">
 
       <p class="brown-text big-text bold">Foothills Overhead Doors LLC recommends and installs LiftMaster Professional Products.</p>
     </div>
