--- a/content/contact/index.html
+++ b/content/contact/index.html
@@ -51,8 +51,8 @@ description: "Get in touch with us to find out more about our high-quality doors
       <label for="Address">Job Address</label>
       <input type="text" class="input" data-placeholder="Job Address" name="Address" value="" >
     </div>
-    <div class="checkbox-input">
-      <p class="tan-text big-p">What type of doors are you interested in?</p>
+    <div class="form-input">
+    <!--  <p class="tan-text big-p">What type of doors are you interested in?</p>
       <div class="">
         <input type="checkbox" name="Residential" value="Residential" class="checkbox">
         <label for="Residential">Residential</label>
@@ -60,7 +60,13 @@ description: "Get in touch with us to find out more about our high-quality doors
       <div class="">
         <input type="checkbox" name="Commercial" value="Commercial" class="checkbox">
         <label for="Commercial">Commercial</label>
-      </div>
+      </div>-->
+
+      <select class="input" name="Type">
+        <option value="unselected" selected disabled hidden>What Type of Doors?</option>
+        <option value="Commercial Doors">Commercial Doors</option>
+        <option value="Residential Doors">Residential Doors</option>
+      </select>
     </div>
 
     <div class="form-input">
