--- a/content/commercial-doors/index.html
+++ b/content/commercial-doors/index.html
@@ -9,7 +9,7 @@ description: "Your source for the highest quality commercial overhead doors and 
 <section class="hero-section">
   <h1 class="tan-text">Commercial Sectional Overhead Doors</h1>
   <div class="">
-    {{< image src="com-hero.jpg" class="secondary-hero" alt="commercial overhead doors" type="global">}}
+    {{< image src="Commercial.jpg" class="secondary-hero" alt="commercial overhead doors" type="global">}}
     <div class="">
       <p class="brown-text">Foothills Overhead Doors LLC has become the overhead door company of choice when reliability is at a premium. We serve commercial and industrial customers in Jonesboro and Northeast Arkansas with a dedication they will truly appreciate. Our economical ribbed steel products offer years of reliable service at minimal investment.</p>
     </div>
