--- a/content/custom-residential/index.html
+++ b/content/custom-residential/index.html
@@ -9,7 +9,7 @@ description: "Get a garage door that exactly suits your tastes with our specialt
 <section class="hero-section">
   <h1 class="tan-text">Custom Residential Doors</h1>
   <div class="">
-    {{< image src="custom-res-hero.jpg" class="secondary-hero left-pos-pic" alt="residential overhead doors" type="global">}}
+    {{< image src="Custom-Residential.jpg" class="secondary-hero left-pos-pic cust-res-hero" alt="residential overhead doors" type="global">}}
     <div class="">
       <p class="brown-text">Foothills Overhead Doors LLC of Jonesboro and Northeast Arkansas is your one stop source of specialty sectional overhead garage doors. We are committed to having the products that match your needs.</p>
 
