--- a/content/residential-doors/index.html
+++ b/content/residential-doors/index.html
@@ -10,7 +10,7 @@ description: Foothills is your premier supplier of overhead doors for your garag
 <section class="hero-section residential">
   <h1 class="tan-text">Residential Doors</h1>
   <div class="">
-    {{< image src="res-hero.jpg" class="secondary-hero" alt="residential overhead doors" type="global">}}
+    {{< image src="Residential.jpg" class="secondary-hero" alt="residential overhead doors" type="global">}}
     <div class="">
       <p class="brown-text">Looking for a garage door for your house? We have a wide range of options to help you find the door that best suits your home.</p>
 
