--- a/content/_index.html
+++ b/content/_index.html
@@ -8,7 +8,7 @@ description: "Foothills Overhead Doors is your premier supplier and installer of
 <!--Hero Section-->
 <section class="home-hero">
   <div class="hero">
-    {{< image src="home-hero.jpg" alt="Foothills overhead doors" type="global">}}
+    {{< image src="home.jpg" alt="Foothills overhead doors" type="global">}}
     <div class="heading">
       <h1>We Install Quality Overhead Doors</h1>
       <p>YOUR satisfaction is our goal-every day!</p>
