--- a/content/rolling-steel/index.html
+++ b/content/rolling-steel/index.html
@@ -28,7 +28,7 @@ description: "Quality rolling steel overhead doors for commercial applications. 
 
 <section class="white-background mid-btn-border hero-section">
   <div class="">
-    {{< image src="Mini-Storage.jpg" class="secondary-hero center-pos-pic" alt="commercial overhead doors" type="global">}}
+    {{< image src="mini-storage.jpg" class="secondary-hero center-pos-pic" alt="commercial overhead doors" type="global">}}
     <div class="rs-points">
       <h2>Mini Storage Doors</h2>
       <ul>
