--- a/content/contact/index.html
+++ b/content/contact/index.html
@@ -28,7 +28,7 @@ description: "Get in touch with us to find out more about our high-quality doors
 
 <section>
   <h2>I Want a Quote</h2>
-  <form name='Contact' class="" action="" method="post" data-netlify="true" data-secure>
+  <form name='Contact' class="" action="/thanks" method="post" data-netlify="true" data-secure>
     <div class="form-columns">
     <div class="form-input">
       <label for="FirstName">First Name*</label>
