--- a/content/faqs/index.html
+++ b/content/faqs/index.html
@@ -12,20 +12,21 @@ description: "Check out our helpful videos on how to prep for your new door and 
 </section>
 
 <section>
+  <p class="bold">These videos are a work in progress. If you have any questions, please reach out to us.</p>
   <div class="video">
     <h2>How to Measure</h2>
     <p class="big-p">For existing doors or new installations.</p>
-    {{< youtube w7Ft2ymGmfc >}}
+    {{< youtube ScMzIvxBSi4 >}}
   </div>
   <div class="video">
     <h2>How to Frame</h2>
     <p class="big-p">What you should know about framing for an overhead door.</p>
-    {{< youtube w7Ft2ymGmfc >}}
+    {{< youtube ScMzIvxBSi4 >}}
   </div>
   <div class="video">
     <h2>How to Maintain</h2>
     <p class="big-p">How to maintain your garage door for ultimate performance and lifetime.</p>
-    {{< youtube w7Ft2ymGmfc >}}
+    {{< youtube ScMzIvxBSi4 >}}
   </div>
   <br>
   <p class="big-p center">Still have questions? Give us a call.</p>
